include/dss_capi.h

    /*
    Number of RegControl objects in Active Circuit
    */
    DSS_CAPI_DLL int32_t RegControls_Get_Count(void);
    DSS_CAPI_DLL void RegControls_Reset(void);
    DSS_CAPI_DLL int32_t RegControls_Get_idx(void);
    DSS_CAPI_DLL void RegControls_Set_idx(int32_t Value);