src/CAPI/CAPI_RegControls.pas

//------------------------------------------------------------------------------
function RegControls_Get_Count(): Integer; CDECL;
begin
    Result := 0;
    if InvalidCircuit(DSSPrime) then
        Exit;
    Result := DSSPrime.ActiveCircuit.RegControls.Count;
end;
//------------------------------------------------------------------------------
procedure RegControls_Reset(); CDECL;
var
    elem: TObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    elem.Reset();
end;
//------------------------------------------------------------------------------
function RegControls_Get_idx(): Integer; CDECL;
begin
    Result := 0;
    if InvalidCircuit(DSSPrime) then
        Exit;
    Result := DSSPrime.ActiveCircuit.RegControls.ActiveIndex
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_idx(Value: Integer); CDECL;
var
    pRegControl: TObj;
begin
    if InvalidCircuit(DSSPrime) then
        Exit;
    pRegControl := DSSPrime.ActiveCircuit.RegControls.Get(Value);
    if pRegControl = NIL then
    begin
        DoSimpleMsg(DSSPrime, 'Invalid %s index: "%d".', ['RegControl', Value], 656565);
        Exit;
    end;
    DSSPrime.ActiveCircuit.ActiveCktElement := pRegControl;
end;
//------------------------------------------------------------------------------
end.
